--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   shared_preferences: ^0.5.12+4
   path: ^1.7.0
   cached_network_image: ^2.4.1
+  intl: ^0.16.1
+  flutter_localizations:
+      sdk: flutter
 
 
 
